--- a/application_webserver/templates/initial.html
+++ b/application_webserver/templates/initial.html
@@ -1,10 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title></title>
+	<meta charset="UTF-8">
+	<title>Initial Step</title>
+	<link href="https://cdn.jsdelivr.net/npm/tailwindcss/dist/tailwind.min.css" rel="stylesheet">
 </head>
 <body>
-	Hello
+	<div class="flex items-center h-screen w-full bg-teal-lighter">
+		<div class="w-full bg-white rounded shadow-lg p-8 m-4 md:max-w-sm md:mx-auto">
+    		<h1 class="block w-full text-center text-grey-darkest mb-6">Please add the public key</h1>
+			<form class="mb-4 md:flex md:flex-wrap md:justify-between" action="/wizard" method="post">
+				<div class="flex flex-col mb-4 md:w-full">
+				<label class="mb-2 uppercase font-bold text-lg text-grey-darkest" for="publicpem">The Public key</label>
+						<textarea name="publicpem" class="w-full shadow-inner p-4 border-0" placeholder="-----BEGIN PUBLIC KEY-----
+AABBCCDDEEFFGGHHIIJJKKLLMMNNOOPPQQRRSSTTUUVVWWXXYYZZ
+-----END PUBLIC KEY-----" rows="12" />
+				</div>    
+				<input type="hidden" name="step" value="initial">
+				<button class="block bg-teal hover:bg-teal-dark text-white uppercase text-lg mx-auto p-4 rounded" type="submit">Generate my uuid</button>
+			</form>
+			<p class="text-center text-grey text-xs">©2018 verwirrteswesen. All rights reserved.</p>
+		</div>
+	</div>
 </body>
 </html>
